# sq-bi

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOMAIN_PACK_GUIDE.md  LICENSE  README.md  SECURITY.md  compose.yaml  pyproject.toml
deploy/: nginx.conf  (+2 more)
services/export/: README.md  pyproject.toml
services/export/src/sq_bi_export/: __init__.py  api.py  renderers.py  repository.py  service.py
services/export/tests/: test_export_api.py
services/runtime/: README.md  pyproject.toml
services/runtime/data/smoke_tests/: tms_smoke.json
services/runtime/scripts/: live_smoke.py  start_backend.ps1
services/runtime/src/sq_bi_runtime/: __init__.py  api.py  asset_catalog.py  audit_store.py  auth.py  auth_routes.py  config.py  connection_secrets.py  controlled_query.py  datasource_executors.py  db.py  deterministic_execution.py  document_store.py  domain_pack_authoring.py  dsl_compiler.py  edition.py  enterprise_pack_builder.py  enterprise_pack_store.py  exploration_planner.py  field_mapping_store.py  guardrails.py  harness.py  llm_client.py  mounting_pipeline.py  pack_dist.py  pack_drafter.py  pack_loader.py  pack_projection.py  personal_asset_store.py  promotion_service.py  prompts.py  query_router.py  rls.py  runtime_asset_providers.py  runtime_asset_resolver.py  runtime_filters.py  schema_catalog.py  schema_profiler.py  schema_scanner.py  scope_recommendation.py  (+10 more)
services/runtime/tests/: test_admin_mounting_api.py  test_ask_controlled_repair.py  test_ask_exploration_api.py  test_asset_catalog.py  test_auth.py  test_catalog_persistence.py  test_config.py  test_connection_secrets.py  test_connectors.py  test_controlled_query.py  test_datasource_admin_api.py  test_datasource_executors.py  test_db.py  test_deterministic_execution.py  test_document_store.py  test_domain_pack_authoring.py  test_dsl_compiler.py  test_edition.py  test_enterprise_pack_api.py  test_enterprise_pack_builder.py  test_enterprise_pack_store.py  test_exploration_planner.py  test_field_mapping_store.py  test_guardrails.py  test_harness.py  test_llm_client.py  test_mounting_pipeline.py  test_pack_drafter.py  test_pack_import_api.py  test_pack_loader.py  test_pack_projection.py  test_personal_asset_store.py  test_personal_asset_templates_api.py  test_personal_promotion_api.py  test_promotion_service.py  test_query_router.py  test_report_runtime.py  test_rls.py  test_runtime_asset_providers.py  test_runtime_asset_resolver.py  (+16 more)
services/semantic/: README.md  pyproject.toml
services/semantic/data/: tms_semantic.yaml
services/semantic/src/sq_bi_semantic/: __init__.py  api.py  interfaces.py  product_repository.py  repository.py  sql_validation.py  synonyms.py
services/semantic/tests/: test_asset_identity_repository.py  test_semantic_layer.py
(+55 files in other folders)
