[project]
name = "sq-bi-export"
version = "0.1.0"
description = "Export, secure sharing, and subscription service for SQ-BI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "sq-bi-contracts",
  "uvicorn>=0.34.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28.0",
  "pytest>=8.3.0",
]

[tool.uv.sources]
sq-bi-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sq_bi_export"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/contracts/src"]
testpaths = ["tests"]
