[project]
name = "sq-bi-runtime"
version = "0.1.0"
description = "Trusted query runtime and security governance service for SQ-BI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "cryptography>=43.0.0",
  "fastapi>=0.115.0",
  "httpx[socks]>=0.28.0",
  "oracledb>=3.0.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "sqlglot>=25.0.0",
  "sq-bi-contracts",
  "sq-bi-semantic",
  "uvicorn>=0.34.0",
  "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
postgres = ["psycopg2-binary>=2.9.9"]
mysql = ["pymysql>=1.1.1"]
clickhouse = ["clickhouse-connect>=0.8.0"]
databases = [
  "psycopg2-binary>=2.9.9",
  "pymysql>=1.1.1",
  "clickhouse-connect>=0.8.0",
]
tms-example = [
  "pandas>=2.2.0",
  "streamlit>=1.44.0",
]

[tool.uv.sources]
sq-bi-contracts = { workspace = true }
sq-bi-semantic = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sq_bi_runtime"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/contracts/src"]
testpaths = ["tests"]
