[project]
name = "sq-bi-semantic"
version = "0.1.0"
description = "Configurable semantic catalog, metric center, and Skill registry for SQ-BI."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic>=2.9.0",
  "pyyaml>=6.0.2",
  "sqlglot>=25.0.0",
  "sq-bi-contracts",
]

[project.optional-dependencies]
dev = ["pytest>=8.3.0"]
tms-example = [
  "httpx>=0.28.0",
  "oracledb>=3.0.0",
  "pandas>=2.2.0",
  "sqlglot>=25.0.0",
  "streamlit>=1.44.0",
  "uvicorn>=0.34.0",
]

[tool.uv.sources]
sq-bi-contracts = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sq_bi_semantic"]

[tool.pytest.ini_options]
pythonpath = ["src", "../../packages/contracts/src", "../.."]
testpaths = ["tests"]
